syntax = "proto3";

option go_package = "common/communication/server-comm/protocol";



message Theta {
    message Data {
        string id = 1;
        string title = 2;
        float avgRating = 3;
    }

    repeated Data data = 1;
}